--- a/app/design/frontend/Alfakher/globalhookah/Magento_Theme/web/css/source/_extend.less
+++ b/app/design/frontend/Alfakher/globalhookah/Magento_Theme/web/css/source/_extend.less
@@ -381,7 +381,7 @@
 
         .footer.content {
             max-width: 100%;
-            margin: 0 180px;
+            margin: 0 7.2rem;
         }
 
         hr {
@@ -532,6 +532,23 @@
             max-width: 100%;
             margin: 0 20px;
         }
+
+        .footer_logo {
+            padding: 0;
+
+            .pagebuilder-column {
+                padding: 0;
+            }
+        }
+
+        .category-container,
+        .helpful-container {
+            padding: 0;
+
+            .header {
+                font-size: 1.8rem;
+            }
+        }
     }
 }
 
@@ -550,6 +567,15 @@
                     max-width: 100%;
                     padding: 10px 72px;
                 } 
+            }
+        }
+    }
+
+    footer.page-footer {
+        .category-container,
+        .helpful-container {
+            .header {
+                font-size: 2.5rem;
             }
         }
     }
@@ -720,7 +746,7 @@
 
     footer.page-footer {
         div.footer.content {
-            padding: 0;
+            padding: 3.6rem 2rem 0 !important;
         }
 
         .copyright_merge {
